# hf-chat

./: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  build_android.sh  dev_android.sh  flake.nix  index.html  input.css  mobile.toml  package.json  pnpm-lock.yaml  rust-analyzer.toml  styles.css  svelte.config.js  tailwind.config.js  vite.config.ts
public/: DIGESTS.md  highlight.js  highlight.min.js
src/: app.html  app.rs  conversation.rs  hooks.server.ts  html.rs  loading.rs  login.rs  main.rs  message.rs  nav.rs  state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  local.rs  main.rs  migrate.rs  mobile.rs  oid.rs
src-tauri/src/commands/: api.rs  conversation.rs  load.rs  local.rs  login.rs  mod.rs  models.rs
src-tauri/src/entities/: conversation.rs  message.rs  mod.rs  model.rs  prelude.rs  settings.rs  user.rs
src-tauri/src/local/: llama.rs  llama_c.rs  mod.rs  phi.rs
src-tauri/src/migrations/: m20230914_053359_create_model.rs  m20230918_064025_create_conversation.rs  m20230918_070745_initial_models.rs  m20230918_082713_create_messages.rs  m20230920_064642_create_settings.rs  m20231005_190334_add_phi.rs  m20231229_125956_create_users.rs  mod.rs
src/lib/: buildPrompt.ts
src/lib/components/: LoginModal.svelte  ModelsModal.svelte  NavMenu.svelte
src/lib/server/: database.ts  models.ts
src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
src/routes/admin/export/: +server.ts
src/routes/conversation/: +server.ts
src/routes/conversation/[id]/: +page.server.ts  +page.svelte  +page.ts  +server.ts
src/routes/conversation/[id]/message/[messageId]/prompt/: +server.ts
src/routes/conversation/[id]/message/[messageId]/vote/: +server.ts
src/routes/conversation/[id]/share/: +server.ts
src/routes/conversation/[id]/stop-generating/: +server.ts
src/routes/conversation/[id]/summarize/: +server.ts
src/routes/conversation/[id]/web-search/: +server.ts
src/routes/conversations/: +page.server.ts
src/routes/login/: +page.server.ts
src/routes/login/callback/: +layout.ts  +page.server.ts  updateUser.ts
src/routes/r/[id]/: +page.server.ts
src/routes/r/[id]/message/[messageId]/prompt/: +server.ts
src/routes/search/[id]/: +server.ts
src/routes/settings/: +page.server.ts
tts/: Cargo.toml
tts/src/: bs1770.rs  lib.rs
