[package]
name = "hf-chat-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
url = "2.5.2"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4.38", features = ["serde"] }
pulldown-cmark = "0.12.2"

[workspace]
members = ["src-tauri"]
