[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.0", features = [] }
futures = "0.3.28"
sea-orm = { version = "0.12.2", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
chrono = "0.4.30"
sea-orm-migration = { version = "0.12.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.32.0", features = ["macros"] }
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
reqwest = "0.11.20"
futures-util = "0.3.28"
tokenizers = "0.14.0"
candle = { version = "0.2.0", package = "candle-core"}
candle-transformers = { version = "0.2.0", package = "candle-transformers" }
openssl = { version = "0.10", features = ["vendored"] }
android_logger = "0.13.3"
tauri-plugin-fs = "2.0.0-alpha.2"
uuid = { version = "1.4.1", features = ["v4"] }
candle-nn = { version = "0.2.0", package = "candle-nn"}
byteorder = "1.4.3"
hf-hub = { version = "0.3.2" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "migrate"
path = "src/migrate.rs"

[profile.release]
strip = true
codegen-units = 1
lto = "fat"

[profile.dev]
strip = true
codegen-units = 1
lto = "fat"
opt-level = 3
